<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">It\'s Paid</string>
    <string name="action_settings">Settings</string>
    <string name="NOB">Name of Bill:</string>
    <string name="AP">Amount Paid: $</string>
    <string name="TAD">Total Amount Due: $</string>
    <string name="InstructDate">Due Date:</string>
    <string name="PIF">Paid in Full:</string>
    <string name="Y">Yes</string>
    <string name="N">No</string>
    <string name="NOBHint">Car Payment</string>
    <string name="APHint">200.00</string>
    <string name="TADHint">600.00</string>
    <string name="save">Save</string>
    <string name="saved">Saved Bills</string>
    <string name="about">About</string>
    <string name="theSurvey">It\'s Paid Feedback Survey</string>
    <string name="thelogo">thelogo</string>
    <string name="PF">Provide Feedback</string>
    <string name="theV">Version 1.0</string>
    <string name="theDC">Developer Company: MadGeek</string>
    <string name="theD">Developer: Devona Ward</string>
    <string name="theStop">Stop</string>
    <string name="thePlay">Play</string>
    <string name="thePause">Pause</string>
    
    <string-array name="month_array">
        
        <item>Jan.</item>
        <item>Feb.</item>
        <item>Mar.</item>
        <item>Apr.</item>
        <item>May</item>
        <item>Jun.</item>
        <item>Jul.</item>
        <item>Aug.</item>
        <item>Sept.</item>
        <item>Oct.</item>
        <item>Nov.</item>
        <item>Dec.</item>
    </string-array>
    
    <string-array name="day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    
    

</resources>
