<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bkgrd">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enterBN"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/NOB" />

        <EditText
            android:id="@+id/billName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/NOBHint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enterAP"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
            android:layout_weight="0.16"
            android:textSize="18sp"
            android:text="@string/AP" />

        <EditText
            android:id="@+id/amountPaid"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/APHint"
            android:inputType="numberDecimal" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enterTAD"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
            android:layout_weight="0.16"
            android:textSize="18sp"
            android:text="@string/TAD" />

        <EditText
            android:id="@+id/totalDue"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginRight="10dp"
            android:hint="@string/TADHint"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="20dp" >
    
    <TextView
        android:id="@+id/txtInstruct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
        android:text="@string/InstructDate"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/monthSpin"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:entries="@array/month_array"/>

    <Spinner
        android:id="@+id/daySpin"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:entries="@array/day_array" />

    <Spinner
        android:id="@+id/yearSpin"
        android:layout_width="90dp"
        android:layout_height="wrap_content" />

    </LinearLayout>
    
	<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:layout_marginBottom="20dp">

    <TextView
        android:id="@+id/paidFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
        android:text="@string/PIF"
        android:textSize="18sp"/>

    <RadioGroup
    android:id="@+id/radioGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">
    
    <RadioButton
        android:id="@+id/radioYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Y" />

    <RadioButton
        android:id="@+id/radioNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N" />
    </RadioGroup>
	</LinearLayout>

	<TextView
	    android:id="@+id/paidFullTxt"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="20dp"
	    android:text="" 
	    android:textSize="18sp"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="70dp"
        android:text="@string/save" 
        android:onClick="saveIt"/>

</LinearLayout>