<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10sp"
        android:layout_weight="0.21" />

    <ImageButton
        android:id="@+id/playBtn"
        android:contentDescription="@string/playB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/playit"
        android:onClick="playIt" />

    <TextView
        android:id="@+id/txtAN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/theV"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtDC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/theDC"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/theD"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pfBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/PF" />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:contentDescription="@string/thelogo"
        android:src="@drawable/mglogo" />

</LinearLayout>